Additional task
- New endpoint to show a product's price with a discount
